[gd_scene load_steps=3 format=3 uid="uid://dj3ts0dee4m6"]

[ext_resource type="Script" path="res://src/screens/save_states_screen/save_state_entry/save_state_entry.gd" id="1_yugvl"]
[ext_resource type="LabelSettings" uid="uid://cc2vi4onhgmnw" path="res://themes/bold_label_settings.tres" id="2_6u1l3"]

[node name="SaveState" type="Control"]
custom_minimum_size = Vector2(0, 130)
layout_mode = 3
anchor_right = 0.499
anchor_bottom = 0.12
offset_right = 0.919983
offset_bottom = 0.399994
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 4
script = ExtResource("1_yugvl")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Delete" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "DELETE"

[node name="Details" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="TeamLabel" type="Label" parent="HBoxContainer/Details"]
layout_mode = 2
text = "TEAM"

[node name="Team" type="Label" parent="HBoxContainer/Details"]
layout_mode = 2
text = "Bolzano"
label_settings = ExtResource("2_6u1l3")

[node name="ManagerLabel" type="Label" parent="HBoxContainer/Details"]
layout_mode = 2
text = "MANAGER"

[node name="Manager" type="Label" parent="HBoxContainer/Details"]
layout_mode = 2
text = "Simon Dalvai"
label_settings = ExtResource("2_6u1l3")

[node name="PlacementLabel" type="Label" parent="HBoxContainer/Details"]
layout_mode = 2
text = "PLACEMENT
"

[node name="Placement" type="Label" parent="HBoxContainer/Details"]
layout_mode = 2
text = "Serie A - 3."
label_settings = ExtResource("2_6u1l3")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Dates" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="GameDateLabel" type="Label" parent="HBoxContainer/Dates"]
layout_mode = 2
text = "GAME DATE"

[node name="GameDate" type="Label" parent="HBoxContainer/Dates"]
layout_mode = 2
text = "12.08.2025"
label_settings = ExtResource("2_6u1l3")

[node name="LastSaveDateLabel" type="Label" parent="HBoxContainer/Dates"]
layout_mode = 2
text = "LAST SAVE"

[node name="LastSaveDate" type="Label" parent="HBoxContainer/Dates"]
layout_mode = 2
text = "03.04.2024"
label_settings = ExtResource("2_6u1l3")

[node name="CreateDateLabel" type="Label" parent="HBoxContainer/Dates"]
layout_mode = 2
text = "CREATED"

[node name="CreateDate" type="Label" parent="HBoxContainer/Dates"]
layout_mode = 2
text = "01.01.2024"
label_settings = ExtResource("2_6u1l3")

[node name="Load" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "LOAD"

[node name="DeleteDialog" type="ConfirmationDialog" parent="."]
title = "CONFIRM"
initial_position = 1
size = Vector2i(400, 300)
borderless = true
ok_button_text = "YES, DELETE"
dialog_text = "You are about to delete your game save state. Are you really sure about this?
In case of mistake, you might find you save state inside your devices trash folder.
Read here more [link to docs]"
dialog_autowrap = true
cancel_button_text = "NO"

[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="HBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="confirmed" from="DeleteDialog" to="." method="_on_delete_dialog_confirmed"]
